test/type/pass/bool_op.j
class A{
  Void main() {
    Bool a;
    a = true && false;
    return;
  }
}
