test/type/fail/bool_op_wrong.j
class A{
  Void main() {
    return true && (5);
  }
}
